src/test/deca/context/invalid/affect-float-boolean.deca
// Description : 
//	 test affectation float <-- boolean
// Resultats :
//	 8:5: Non compatible assignment of expression
{
	float f;
	boolean b;
	f = b;
}